# rust-auth-service

./: .gitignore  Cargo.toml  README.md
src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
static/: index.html  landing.html  reset_password.html  signup.html
tests/: api.rs
