[package]
name = "rust-auth-service"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Pratap Bhuyan <https://linkedin.com/in/adityabhuyan>"]
description = "A simple Rust-based REST authentication service built with Axum and in-memory database."
license = "GPL-3.0-or-later"
repository = "https://github.com/practice-rust-for-beginners/rust-auth-service"
readme = "README.md"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1.4", features = ["full"] }    # ✅ added